# SWAM

./: .gitignore  README.md  brestCancer.py  folders.txt  iris.py  wine.py
algorithms/RandomForest/c++/: CMakeLists.txt
algorithms/RandomForest/c++/src/: CMakeLists.txt  divider  main.cpp
algorithms/logreg/: Makefile  datacleaner.py  runner.py
data/: mean_group_by_language.csv  median_group_by_algorithm.csv
datasets/breastcancer/: breastCancer_processed.csv  breastcancer.csv
datasets/iris/: iris.csv  iris_processed.csv
datasets/winequality/: wineQuality_processed.csv  wine_data.csv
linking/: emissions.csv  linker.py  script  script.R  script.cpp  script.java  script.m
linking/output/: script
logreg/brestcancer/: datacleaner.py  lr.bc.m  lr_bc.py  lr_bc.r  runner.py
newStruct?/python/: breastCancer.py  emissions.csv  iris.py
src/: HandlePlot.py  allRunner.py  allRunner.sh  analisi.txt  emissions.csv  emissions_detailed.csv  handleCsv.py  handlePlot.py  merged_emissions.csv  newHandlePlotForFun.py  powermetrics_log.txt  raw_merged_emissions.csv  requirementsAll.txt  requirementsCpp.txt  utils.py
src/R/: emissions.csv  emissions_detailed.csv  handleCsv.py  powermetrics_log.txt  rRunner.R  rRunner.py  rRunnerSubProcess.py  rRunnerTest.R  rRunnerTrain.R  requirements.Rmd  requirements.html  temp.py  tempRunner.py
src/cpp/: .gitignore  CMakeLists.txt  adaboost_model.xml  cRunner.py  emissions.csv  emissions.csv.bak  emissions_detailed.csv  knn_model.xml  naivebayes_model.xml  powermetrics_log.txt  process_data.py  requirements.txt  svm_model.xml  tracker_control.py  xgboost_adaboost_model.json
src/cpp/emissions/: emissions.csv  emissions_detailed.csv  powermetrics_log.txt
src/cpp/output/: AdaBoost_breastCancer_test_emissions.csv  AdaBoost_breastCancer_train_emissions.csv  AdaBoost_iris_test_emissions.csv  AdaBoost_iris_train_emissions.csv  AdaBoost_wine_test_emissions.csv  AdaBoost_wine_train_emissions.csv  KNN_breastCancer_test_emissions.csv  KNN_breastCancer_train_emissions.csv  KNN_iris_test_emissions.csv  KNN_iris_train_emissions.csv  KNN_wine_test_emissions.csv  KNN_wine_train_emissions.csv  SVC_breastCancer_test_emissions.csv  SVC_breastCancer_train_emissions.csv  SVC_iris_test_emissions.csv  SVC_iris_train_emissions.csv  SVC_wine_test_emissions.csv  SVC_wine_train_emissions.csv  adaBoost_breastCancer_test_emissions.csv  adaBoost_breastCancer_train_emissions.csv  adaBoost_iris_test_emissions.csv  adaBoost_iris_train_emissions.csv  adaBoost_wine_test_emissions.csv  adaBoost_wine_train_emissions.csv  decisionTree_breastCancer_test_emissions.csv  decisionTree_breastCancer_train_emissions.csv  decisionTree_iris_test_emissions.csv  decisionTree_iris_train_emissions.csv  decisionTree_wine_test_emissions.csv  decisionTree_wine_train_emissions.csv  emissions.csv  logisticRegression_breastCancer_test_emissions.csv  logisticRegression_breastCancer_train_emissions.csv  logisticRegression_iris_test_emissions.csv  logisticRegression_iris_train_emissions.csv  logisticRegression_wine_test_emissions.csv  logisticRegression_wine_train_emissions.csv  naiveBayes_breastCancer_test_emissions.csv  naiveBayes_breastCancer_train_emissions.csv  naiveBayes_iris_test_emissions.csv  (+9 more)
src/cpp/src/: Adaboost.cpp  CMakeLists.txt  DecisionTree.cpp  RandomForest.cpp  XGBOOST.cpp  cRunner.cpp  crunner  knn.cpp  loader.cpp  logreg.cpp  naiveBayes.cpp  pythonLinker.cpp  pythonLinker.h  svc.cpp
src/java/: adaboostModel.model  decisionTree.model  emissions.csv  emissions_detailed.csv  how-to-run.txt  jRunner.py  knnModel.model  logisticModel.model  naiveBayesModel.model  pom.xml  powermetrics_log.txt  randomForestModel.model  svcModel.model
src/matlab/: combined_emissions.csv  emission_detailed.csv  emissions.csv  emissions_detailed.csv  emissions_detailed.csv.bak  matlabRunner.py  powermetrics_log.txt  runAlgorithm.m  settings_for_matlab.txt  tracker_control.py
src/processedDatasets/: meanEmissions.csv  meanEmissionsNew.csv  mean_group_by_algorithm.csv  (+7 more)
(+236 files in other folders)
